Fix discord using default scrollbars

--- a/assets/css/discord.css
+++ b/assets/css/discord.css
@@ -1,5 +1,7 @@
 * {
     outline: none;
+    scrollbar-width: unset !important;
+    scrollbar-color: unset !important;
 }
 
 [class^="socialLinks-"] + [class^="info-"] {
